# hs-coverage-report

./: .gitignore  CHANGELOG.md  Makefile  cabal.project  coverage-report.cabal
docs/: notes.md
package-a/: package-a.cabal
package-a/src/: MyLib.hs
package-b/: package-a.cabal
package-b/src/: MyLibB.hs
scripts/: ghc.sh
test/: MyLibTest.hs
test-a/: test-a.cabal
test-b/: test-b.cabal
test-b/test/: MyLibTest.hs
