cabal-version:      2.4
name:               coverage-report
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:
maintainer:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite coverage-report-test
    default-language: Haskell2010
    build-depends:    QuickCheck,
                      coverage-report,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
