cabal-version:      2.4
name:               coverage-report
version:            0.1.0.0
license:            NONE

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   package-a/src
    default-language: Haskell2010

test-suite test-a-test
    default-language: Haskell2010
    build-depends:    QuickCheck,
                      coverage-report,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test-a/test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0

test-suite test-b-test
    default-language: Haskell2010
    build-depends:    QuickCheck,
                      coverage-report,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test-b/test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0