cabal-version:      2.4
name:               test-b
version:            0.1.0.0
license:            NONE

test-suite test-a-test
    default-language: Haskell2010
    build-depends:    QuickCheck,
                      package-a,
                      package-b,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0